infrastructure/exposed-services-for-green-metrics-tool/hoverfly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoverfly
  namespace: hoverfly
spec:
  type: ClusterIP
  ports:
    - name: mock
      protocol: TCP
      port: 8500
    - name: admin
      protocol: TCP
      port: 8888
  selector:
    name: hoverfly
---
apiVersion: v1
kind: Service
metadata:
  name: jwks
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8500
  selector:
    name: hoverfly
---
apiVersion: v1
kind: Service
metadata:
  name: steps
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8500
  selector:
    name: hoverfly
